# advent-of-code-2022

./: CMakeLists.txt  PuzzleInput.hpp  README.md  SectionedPuzzleInput.hpp
day1/: Elf.hpp  ElfCollection.hpp  Food.hpp  FoodList.hpp  README.md  main.cpp
day10/: CRT.hpp  Instruction.hpp  InstructionList.hpp  Register.hpp  main.cpp
day2/: README.md  Shape.hpp  StrategyGuide.hpp  UpdatedStrategyGuide.hpp  main.cpp
day3/: Compartment.hpp  ContentList.hpp  Item.hpp  README.md  Rucksack.hpp  RucksackCollection.hpp  RucksackGroup.hpp  RucksackGroupCollection.hpp  main.cpp
day4/: Assignment.hpp  AssignmentListing.hpp  AssignmentPairCollection.hpp  README.md  main.cpp
day5/: Crate.hpp  MoveOrder.hpp  README.md  Stack.hpp  Stacks.hpp  main.cpp
day6/: Cookie.hpp  ProtocolData.hpp  README.md  main.cpp
day7/: CommandListing.hpp  DeleteCandidateVisitor.cpp  DeleteCandidateVisitor.hpp  FileSystemMap.hpp  IPrintable.hpp  ISized.hpp  IVisitor.hpp  InternalNode.hpp  LeafNode.hpp  SizeAdderVisitor.cpp  SizeAdderVisitor.hpp  TreeNode.hpp  main.cpp
day9/: Head.hpp  IDynamic.hpp  Located.hpp  LongRope.hpp  Movement.hpp  MovementList.hpp  Rope.hpp  State.hpp  Tail.hpp  main.cpp
